update frontend scripts and templates

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div id="welcome-screen" class="welcome-screen">
-        <img id="logoBig" src="/static/img/logo.png" alt="Company Logo" style="display:none;">
+        <img id="logoBig" src="/static/logo-color.png" alt="Company logo" style="display:none;">
         <h1 id="companyName"></h1>
         <h3 id="welcomeText"></h3>
     </div>
